--- a/css/style.css
+++ b/css/style.css
@@ -235,7 +235,7 @@ main p {
   max-width: 250px;
   margin: 0 0 1rem 2rem;
   border-radius: 16px;
-  overflow: hidden;
+  d overflow: hidden;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   border: 1px solid #ddd;
 }
