--- a/css/style.css
+++ b/css/style.css
@@ -197,6 +197,26 @@ nav.right ul li a:focus {
   /* fallback in case JS fails */
 }
 
+/*stick footer */
+
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+main {
+  flex: 1 0 auto;
+}
+
+footer {
+  flex-shrink: 0;
+}
+
+
 /* === Container === */
 .container {
   max-width: 1150px;
