center h3 on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -629,6 +629,10 @@ figcaption .credit {
     cursor: pointer;
   }
 
+  h3 {
+    text-align: center;
+  }
+
   nav.right ul {
     display: none;
   }
