--- a/css/style.css
+++ b/css/style.css
@@ -176,7 +176,7 @@ main {
   justify-content: space-between;
   align-items: center;
   padding: 2rem 3rem;
-  border-bottom: 5px solid var(--accent-green);
+  border-bottom: 7px solid var(--accent-green);
   z-index: 1000;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
@@ -206,7 +206,7 @@ main {
 }
 
 .left h1 a:visited {
-  color: var(--white);
+  color: var(--accent-green);
   text-decoration: none;
 }
 
@@ -552,7 +552,7 @@ footer {
   background-color: var(--primary-blue);
   color: var(--white);
   padding: 1rem 2rem;
-  border-top: 5px solid var(--accent-green);
+  border-top: 7px solid var(--accent-green);
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
