--- a/css/style.css
+++ b/css/style.css
@@ -203,6 +203,7 @@ main {
 .left h1 a {
   color: var(--white);
   text-decoration: none;
+  text-shadow: 2px 2px 0 var(--accent-green);
 }
 
 .left h1 a:visited {
